init: start presentation task

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section style="top: 0px; display: block;"  class="present">
       <img
           style="border-radius: 10px"
-          src="examplesssets/choiсe.png"
+          src="./examples/assets/choiсe.png"
           width="900"
           height="450"
           alt="choice image"
@@ -30,7 +30,7 @@
       <section>
         <h2>Main stats</h2>
         <img
-            src="examplesssets/Stats1.png"
+            src="./examples/assets/Stats1.png"
             width="900"
             height="250"
             alt="Vue-icon"
@@ -39,7 +39,7 @@
       <section>
         <h2>Download statistics:</h2>
         <img
-            src="examplesssets/Downloads1.png"
+            src="./examples/assets/Downloads1.png"
             width="900"
             height="450"
             alt="Vue-icon"
@@ -173,7 +173,7 @@
     <section>
       <h2>architecture</h2>
       <img
-          src="examplesssets/Architecture.png"
+          src="./examples/assets/Architecture.png"
           width="900"
           height="450"
           alt="Vue-icon"
